# Qt_vpn_interface

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  sidemenu.cpp  sidemenu.h
custom_objects/: CMakeLists.txt  button_footbar.cpp  button_footbar.h  button_icon.cpp  button_icon.h  overlay.cpp  overlay.h
pages/: CMakeLists.txt  page_1.cpp  page_1.h  page_2.cpp  page_2.h  page_3.cpp  page_3.h  page_4.cpp  page_4.h  page_5.cpp  page_5.h
ressources/: logos.rc  palette1.xml  ressources.qrc
ressources/stylesheets/: Dizalty_custom.old.qss  Dizalty_custom.qss  SpyBot.qss  pasted.txt
ui_files/: mainwindow.ui  page_1.old.ui  page_1.ui  page_2.ui  page_3.old.ui  page_3.ui  page_4.old.ui  page_4.ui  page_5.ui  sidemenu.ui
